--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><span>MVC</span>&nbsp;TestProject</a>
+                <a class="navbar-brand" href="#"><span>Pay</span>&nbsp;Me</a>
                 <ul class="nav navbar-top-links navbar-right">
                     <li class="dropdown">
                         <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
@@ -193,10 +193,10 @@
         </form>
         <ul class="nav menu">
             <li class="active"><a href="~/Home/Index"><em class="fa fa-dashboard">&nbsp;</em> Dashboard</a></li>
-            <li><a href="~/Employee/Index"><em class="fa fa-calendar">&nbsp;</em> Employees</a></li>
-            <li><a  href="~/Client/Index"><em class="fa fa-bar-chart">&nbsp;</em> Client</a></li>
-            <li><a  href="#"><em class="fa fa-toggle-off">&nbsp;</em> Project</a></li>
-            <li><a href="#"><em class="fa fa-clone">&nbsp;</em> Alerts &amp; Panels</a></li>
+            <li><a href="~/Employee/Index"><em class="fa fa-users">&nbsp;</em> Employees</a></li>
+            <li><a  href="~/Client/Index"><em class="fa fa-bar-chart">&nbsp;</em> Clients</a></li>
+            <li><a  href="#"><em class="fa fa-toggle-off">&nbsp;</em> Projects</a></li>
+            <li><a href="#"><em class="fa fa-bar-chart">&nbsp;</em> Reports</a></li>
             <li class="parent ">
                 <a data-toggle="collapse" href="#sub-item-1">
                     <em class="fa fa-navicon">&nbsp;</em> Timesheet <span data-toggle="collapse" href="#sub-item-1" class="icon pull-right"><em class="fa fa-plus"></em></span>
