--- a/PayMe/PayMe/Views/Employee/Index.cshtml
+++ b/PayMe/PayMe/Views/Employee/Index.cshtml
@@ -23,7 +23,7 @@
                 <em class="fa fa-home"></em>
             </a>
         </li>
-        <li class="active">Employee List</li>
+        <li class="active">Employees</li>
     </ol>
 </div>
 
@@ -32,7 +32,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
-            <div class="panel-heading">Employee List</div>
+            <div class="panel-heading">Employees</div>
             <div class="panel-body">
                 <div id="toolbar">
                     <button id="export" class="btn btn-default">Export Excel</button>
