Project page and Design changes added

--- a/PayMe/PayMe/Views/Client/Index.cshtml
+++ b/PayMe/PayMe/Views/Client/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "PayMe - Login";
+    ViewBag.Title = "PayMe - Clients";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
