--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -194,9 +194,10 @@
         <ul class="nav menu">
             <li class="active"><a href="~/Home/Index"><em class="fa fa-dashboard">&nbsp;</em> Dashboard</a></li>
             <li><a href="~/Employee/Index"><em class="fa fa-users">&nbsp;</em> Employees</a></li>
-            <li><a  href="~/Client/Index"><em class="fa fa-bar-chart">&nbsp;</em> Clients</a></li>
-            <li><a  href="#"><em class="fa fa-toggle-off">&nbsp;</em> Projects</a></li>
-            <li><a href="#"><em class="fa fa-bar-chart">&nbsp;</em> Reports</a></li>
+            <li><a  href="~/Client/Index"><em class="fa fa-globe">&nbsp;</em> Clients</a></li>
+            <li><a  href="~/Project/Index"><em class="fa fa-suitcase">&nbsp;</em> Projects</a></li>
+            <li><a href="#"><em class="fa fa-money">&nbsp;</em> Expenses</a></li>
+          
             <li class="parent ">
                 <a data-toggle="collapse" href="#sub-item-1">
                     <em class="fa fa-navicon">&nbsp;</em> Timesheet <span data-toggle="collapse" href="#sub-item-1" class="icon pull-right"><em class="fa fa-plus"></em></span>
@@ -219,6 +220,7 @@
                     </li>
                 </ul>
             </li>
+            <li><a href="#"><em class="fa fa-bar-chart">&nbsp;</em> Reports</a></li>
             <li><a href="~/Login/Logout"><em class="fa fa-power-off">&nbsp;</em> Logout</a></li>
         </ul>
     </div><!--/.sidebar-->
