--- a/PayMe/PayMe/Views/Employee/Index.cshtml
+++ b/PayMe/PayMe/Views/Employee/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "PayMe - Login";
+    ViewBag.Title = "PayMe - Employees";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
