Project And Design Changes

--- a/PayMe/PayMe/Views/Home/Index.cshtml
+++ b/PayMe/PayMe/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "PayMe - Login";
+    ViewBag.Title = "PayMe - Dashboard";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
