--- a/PayMe/PayMe/Views/Employee/Register.cshtml
+++ b/PayMe/PayMe/Views/Employee/Register.cshtml
@@ -25,7 +25,7 @@
 
         @if (TempData["MessageRegistration"] != null)
             {
-            <p class="alert alert-success" id="successMessage">@TempData["MessageRegistration"]</p>
+            <p class="alert alert-danger" id="successMessage">@TempData["MessageRegistration"]</p>
         }
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
