--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><span>Pay</span>&nbsp;Me</a>
+                <a class="navbar-brand" href="#"><span>TEST</span>&nbsp;APP</a>
                 <ul class="nav navbar-top-links navbar-right">
                     <li class="dropdown">
                         <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
@@ -176,9 +176,9 @@
     </nav>
     <div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
         <div class="profile-sidebar">
-            <div class="profile-userpic">
+            @*<div class="profile-userpic">
                 <img src="~/Images/UserIcon.png" class="img-responsive" alt="">
-            </div>
+            </div>*@
             <div class="profile-usertitle">
                 <div class="profile-usertitle-name">@Session["FullName"]</div>
                 <div class="profile-usertitle-status"><span class="indicator label-success"></span>Online</div>
@@ -196,7 +196,7 @@
             <li><a href="~/Employee/Index"><em class="fa fa-users">&nbsp;</em> Employees</a></li>
             <li><a  href="~/Client/Index"><em class="fa fa-globe">&nbsp;</em> Clients</a></li>
             <li><a  href="~/Project/Index"><em class="fa fa-suitcase">&nbsp;</em> Projects</a></li>
-            <li><a href="#"><em class="fa fa-money">&nbsp;</em> Expenses</a></li>
+            <li><a  href="~/Expense/Index"><em class="fa fa-money">&nbsp;</em> Expenses</a></li>
           
             <li class="parent ">
                 <a data-toggle="collapse" href="#sub-item-1">
