Project Task Page Development

--- a/PayMe/PayMe/Views/Expense/Detail.cshtml
+++ b/PayMe/PayMe/Views/Expense/Detail.cshtml
@@ -144,6 +144,14 @@
 
     $(document).ready(function () {
      
+        $('#BSbtninfo').filestyle({
+ 
+            buttonName : 'btn-info',
+ 
+            buttonText : ' Select a File'
+ 
+        });
+
         var table = $('#table');
         $('#export').click(function () {
             table.tableExport({
