--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using PayMe.Utilities
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -192,12 +193,12 @@
             </div>
         </form>
         <ul class="nav menu">
-            <li class="active"><a href="~/Home/Index"><em class="fa fa-dashboard">&nbsp;</em> Dashboard</a></li>
-            <li><a href="~/Employee/Index"><em class="fa fa-users">&nbsp;</em> Employees</a></li>
-            <li><a  href="~/Client/Index"><em class="fa fa-globe">&nbsp;</em> Clients</a></li>
-            <li><a  href="~/Project/Index"><em class="fa fa-suitcase">&nbsp;</em> Projects</a></li>
-            <li><a href="~/Tasks/Index"><em class="fa fa-tasks">&nbsp;</em> Tasks</a></li>
-            <li><a  href="~/Expense/Index"><em class="fa fa-money">&nbsp;</em> Expenses</a></li>
+            <li class='@Html.IsActive("Home", "Index")'><a href="~/Home/Index"><em class="fa fa-dashboard">&nbsp;</em> Dashboard</a></li>
+            <li class='@Html.IsActive("Employee", "Index")'><a href="~/Employee/Index"><em class="fa fa-users">&nbsp;</em> Employees</a></li>
+            <li class='@Html.IsActive("Client", "Index")'><a href="~/Client/Index"><em class="fa fa-globe">&nbsp;</em> Clients</a></li>
+            <li class='@Html.IsActive("Project", "Index")'><a href="~/Project/Index"><em class="fa fa-suitcase">&nbsp;</em> Projects</a></li>
+            <li class='@Html.IsActive("Tasks", "Index")'><a href="~/Tasks/Index"><em class="fa fa-tasks">&nbsp;</em> Tasks</a></li>
+            <li class='@Html.IsActive("Expense", "Index")'><a href="~/Expense/Index"><em class="fa fa-money">&nbsp;</em> Expenses</a></li>
           
             <li class="parent ">
                 <a data-toggle="collapse" href="#sub-item-1">
