--- a/PayMe/PayMe/Views/Expense/Create.cshtml
+++ b/PayMe/PayMe/Views/Expense/Create.cshtml
@@ -17,7 +17,9 @@
 
 
 <div class="panel panel-default">
-    <div class="panel-heading">Create Expense</div>
+    <div class="panel-heading">Create Expense
+        
+    </div>
     <div class="panel-body">
 
         @if (TempData["Message"] != null)
@@ -90,7 +92,6 @@
 
     </div>
 </div>
-
 
 
 <div>
