--- a/PayMe/PayMe/Views/Expense/Detail.cshtml
+++ b/PayMe/PayMe/Views/Expense/Detail.cshtml
@@ -128,7 +128,7 @@
                                 <th data-field="BillDate" data-sortable="true" data-formatter="dateFormat">BillDate</th>
                                 <th data-field="Location" data-sortable="true">Location</th>
                                 <th data-field="HasAttachment" data-sortable="true" data-formatter="YesNoFormater">Has Attachment</th>
-                                <th data-field="Notes" data-sortable="true">To Date</th>
+                                <th data-field="Notes" data-sortable="true">Notes</th>
                                 <th data-field="ID" data-sortable="true" data-formatter="Download">Download</th>
                             </tr>
                         </thead>
