--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -221,7 +221,24 @@
                     </li>
                 </ul>
             </li>
-            <li><a href="#"><em class="fa fa-bar-chart">&nbsp;</em> Reports</a></li>
+            <li class="parent ">
+                <a data-toggle="collapse" href="#sub-item-2">
+                    <em class="fa fa-bar-chart">&nbsp;</em> Reports <span data-toggle="collapse" href="#sub-item-1" class="icon pull-right"><em class="fa fa-plus"></em></span>
+                </a>
+                <ul class="children collapse" id="sub-item-2">
+                    <li>
+                        <a class="" href="~/Report/ExpensesSummery">
+                            <span class="fa fa-arrow-right">&nbsp;</span> Expenses Summery 
+                        </a>
+                    </li>
+                    <li>
+                        <a class="" href="~/Report/ExpensesDetail">
+                            <span class="fa fa-arrow-right">&nbsp;</span> Expenses Detail 
+                        </a>
+                    </li>                   
+                </ul>
+            </li>
+            
             <li><a href="~/Login/Logout"><em class="fa fa-power-off">&nbsp;</em> Logout</a></li>
         </ul>
     </div><!--/.sidebar-->
