--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -199,7 +199,8 @@
             <li class='@Html.IsActive("Project", "Index")'><a href="~/Project/Index"><em class="fa fa-suitcase">&nbsp;</em> Projects</a></li>
             <li class='@Html.IsActive("Tasks", "Index")'><a href="~/Tasks/Index"><em class="fa fa-tasks">&nbsp;</em> Tasks</a></li>
             <li class='@Html.IsActive("Expense", "Index")'><a href="~/Expense/Index"><em class="fa fa-money">&nbsp;</em> Expenses</a></li>
-            <li class='@Html.IsActive("Timesheet", "Index")'><a href="~/Timesheet/Index"><em class="fa fa-money">&nbsp;</em> Timesheet</a></li>
+            <li class='@Html.IsActive("Timesheet", "Index")'><a href="~/Timesheet/Index"><em class="fa fa-calendar">&nbsp;</em> Timesheet</a></li>
+            <li class='@Html.IsActive("TimeTracker", "Index")'><a href="~/TimeTracker/Index"><em class="fa fa-clock-o">&nbsp;</em> Time Tracker</a></li>
           
             <li class='@Html.IsActive("Report", "Index")' >
                 <a data-toggle="collapse" href="#sub-item-1">
