--- a/PayMe/PayMe/Views/Client/Create.cshtml
+++ b/PayMe/PayMe/Views/Client/Create.cshtml
@@ -34,12 +34,12 @@
 
             <div class="row">
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.ClientName, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.ClientName, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.EditorFor(model => model.ClientName, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ClientName, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.ClientCode, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.ClientCode, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.EditorFor(model => model.ClientCode, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ClientCode, "", new { @class = "text-danger" })
                 </div>
