--- a/PayMe/PayMe/Views/Employee/Register.cshtml
+++ b/PayMe/PayMe/Views/Employee/Register.cshtml
@@ -36,17 +36,17 @@
 
             <div class="row">
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.TextBoxFor(model => model.FirstName, new { @class = "form-control", @maxlength = 40, @onkeypress = "return onlyspecchar(event);" })
                     @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.TextBoxFor(model => model.LastName, new { @class = "form-control", @maxlength = 40, @onkeypress = "return onlyspecchar(event);" })
                     @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.MobileNo, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.MobileNo, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.TextBoxFor(model => model.MobileNo, new { @class = "form-control", @maxlength = 10, @onkeydown = "return OnlyNumeric(this);" })
                     @Html.ValidationMessageFor(model => model.MobileNo, "", new { @class = "text-danger" })
                 </div>
@@ -56,13 +56,13 @@
                 <div class="row">
                     <div class="clearfix"></div>
                     <div class="col-lg-4">
-                        @Html.LabelFor(model => model.EmailID, htmlAttributes: new { @class = "control-label manadatory" })
+                        @Html.LabelFor(model => model.EmailID, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.EmailID, new { @class = "form-control", @maxlength = 50 })
                         @Html.ValidationMessageFor(model => model.EmailID, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-lg-4" >
 
-                        @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label manadatory" })
+                        @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                         @Html.DropDownList("Gender", new List<SelectListItem>
 {
    new SelectListItem{ Text="Male", Value = "1" },
@@ -73,7 +73,7 @@
                         @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-lg-4">
-                        @Html.LabelFor(model => model.Birthdate, htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.Birthdate, htmlAttributes: new { @class = "control-label" }) <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.Birthdate, new { @class = "form-control", @onkeypress = "alert('Choose Birthdate');" })
                         @Html.ValidationMessageFor(model => model.Birthdate, "", new { @class = "text-danger" })
                     </div>
@@ -81,17 +81,17 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
-                        @Html.LabelFor(model => model.DateofJoining, htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.DateofJoining, htmlAttributes: new { @class = "control-label" }) <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.DateofJoining, new { @class = "form-control", @onkeypress = "alert('Choose DateofJoining');" })
                         @Html.ValidationMessageFor(model => model.DateofJoining, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-lg-4">
-                        @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label manadatory" })
+                        @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.Username, new { @class = "form-control", @maxlength = 20, @onkeypress = "return onlyspecchar(event);", @onblur = "CheckUsernameExists();" })
                         @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-lg-4">
-                        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label manadatory" })
+                        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                         @Html.PasswordFor(model => model.Password, new { @class = "form-control", @maxlength = 30, })
                         @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                     </div>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
-                        @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label manadatory" })
+                        @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                         @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
                     </div>
