--- a/PayMe/PayMe/Views/Expense/Create.cshtml
+++ b/PayMe/PayMe/Views/Expense/Create.cshtml
@@ -38,12 +38,12 @@
             <div class="row">
 
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.ProjectID, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.ProjectID, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.DropDownList("ProjectID", ViewBag.Projects as SelectList, "--Please select--"
 , new { @class = "form-control input-lg" })
                     @Html.ValidationMessageFor(model => model.ProjectID, "", new { @class = "text-danger" })
@@ -56,13 +56,13 @@
                 <div class="clearfix"></div>
                 <div class="col-lg-4">
                  
-                        @Html.LabelFor(model => model.FromDate, htmlAttributes: new { @class = "control-label" })
+                        @Html.LabelFor(model => model.FromDate, htmlAttributes: new { @class = "control-label" }) <span class="text-danger">*</span>
                         @Html.TextBoxFor(model => model.FromDate, new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.FromDate, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="col-lg-4">
-                   @Html.LabelFor(model => model.ToDate, htmlAttributes: new { @class = "control-label" })
+                   @Html.LabelFor(model => model.ToDate, htmlAttributes: new { @class = "control-label" }) <span class="text-danger">*</span>
                 @Html.TextBoxFor(model => model.ToDate, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ToDate, "", new { @class = "text-danger" })
                 </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label manadatory" }) 
                     @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                 </div>
