--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -171,6 +171,22 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
+                            <em class="fa fa-power-off"></em><span class="label label-info"></span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-alerts">
+                            <li>
+                                <a href="~/Login/Logout">
+                                    <div>
+                                        <em class="fa fa-power-off"></em> Logout
+                                       
+                                    </div>
+                                </a>
+                            </li>
+                           
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div><!-- /.container-fluid -->
