--- a/PayMe/PayMe/Views/Tasks/Create.cshtml
+++ b/PayMe/PayMe/Views/Tasks/Create.cshtml
@@ -29,13 +29,13 @@
 
             <div class="row">
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.ClientID, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.ClientID, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.DropDownList("ClientID", ViewBag.Client as SelectList, "--Please select--", new { @class = "form-control input-lg" })
                     @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.ProjectId, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.ProjectId, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.DropDownList("ProjectId", ViewBag.Project as SelectList, "--Please select--", new { @class = "form-control input-lg" })
                     @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
                 </div>
@@ -45,7 +45,7 @@
             <div class="row">
                 <div class="clearfix"></div>
                 <div class="col-lg-4">
-                    @Html.LabelFor(model => model.TaskName, htmlAttributes: new { @class = "control-label manadatory" })
+                    @Html.LabelFor(model => model.TaskName, htmlAttributes: new { @class = "control-label manadatory" }) <span class="text-danger">*</span>
                     @Html.EditorFor(model => model.TaskName, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.TaskName, "", new { @class = "text-danger" })
                 </div>
