Timesheet Report development

--- a/PayMe/PayMe/Views/Shared/_Layout.cshtml
+++ b/PayMe/PayMe/Views/Shared/_Layout.cshtml
@@ -208,15 +208,19 @@
                 <ul class="children collapse" id="sub-item-1">
                     <li>
                         <a class="" href="~/Report/ExpensesSummery">
-                            <span class="fa fa-arrow-right">&nbsp;</span> Expense Summary Report
+                            <span class="fa fa-arrow-right">&nbsp;</span> Expense Summary 
                         </a>
                     </li>
                     <li>
                         <a class="" href="~/Report/ExpensesDetail">
-                            <span class="fa fa-arrow-right">&nbsp;</span> Expense Detail Report
+                            <span class="fa fa-arrow-right">&nbsp;</span> Expense Detail 
                         </a>
                     </li>
-                   
+                    <li>
+                        <a class="" href="~/Report/TimesheetDetail">
+                            <span class="fa fa-arrow-right">&nbsp;</span> Timesheet Detail
+                        </a>
+                    </li>
                 </ul>
             </li>
             @*<li><a href="#"><em class="fa fa-bar-chart">&nbsp;</em> Reports</a></li>*@
